infra/argocd/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  # entryPoints:
  #   - websecure
  routes:
    - kind: Rule
      match: Host(`argocd.yannikmueller.eu`)
      priority: 10
      services:
        - name: argocd-server
          port: 80
    - kind: Rule
      match: Host(`argocd.yannikmueller.eu`) && Header(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: argocd-server
          port: 80
          scheme: h2c
  tls:
    secretName: argocd.yannikmueller.eu-tls
    certResolver: default
